fix(ui): Navbar item spacing

--- a/app/core/static/core/css/style.css
+++ b/app/core/static/core/css/style.css
@@ -142,6 +142,7 @@ a::selection {
 .navbar .nav-menu {
   display: flex;
   flex-direction: row;
+  gap: 1rem;
 }
 
 .navbar .path {
